--- a/public/backend/css/lecture.css
+++ b/public/backend/css/lecture.css
@@ -1,4 +1,4 @@
-.chapter_div {
+/* .chapter_div {
     margin: 25px 0;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -8,7 +8,7 @@
 
 .chapter {
     padding: 12px;
-    font-size: 18px;
+    font-size: 16px;
     color: #666;
     font-weight: 600;
     border-bottom: 1px solid #eee;
@@ -50,7 +50,6 @@
     margin: 0 !important;
 }
 .time {
-    display: inline-block;
     float: right;
     margin-right: 5px;
 }
@@ -59,5 +58,4 @@
     font-size: 25px;
     padding:10px 0 15px 0;
     border-top: 1px solid rgb(218, 218, 218);
-    /* border-bottom: 1px solid rgb(218, 218, 218); */
-}
+} */
