--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -1,3 +1,19 @@
+.content h1 {
+    font-size: 40px;
+    line-height: 1.3;
+}
+.content h6 {
+    font-size: 30px;
+    line-height: 1.3;
+}
+.slider-01 .swiper-slide {
+    height: 400px !important;
+}
+.slider-01:before {
+    background: none;
+}
+
+
 /* Select2 */
 .select2-container{
     z-index:100000;
