--- a/public/backend/css/lecture_play.css
+++ b/public/backend/css/lecture_play.css
@@ -1,15 +1,21 @@
-@media(min-width:991px){
-    .sidebar {width:350px !important}
-    .content {margin-left:0;padding-left:265px;width:100%;}
-  }
+@media (min-width: 991px) {
+    .sidebar {
+        width: 350px !important;
+    }
+    .content {
+        margin-left: 0;
+        padding-left: 265px;
+        width: 100%;
+    }
+}
 
-  .sidebar .nav>.nav-item a, .sidebar[data-background-color=white] .nav>.nav-item a {
+.sidebar .nav > .nav-item a,
+.sidebar[data-background-color="white"] .nav > .nav-item a {
     padding: 5px !important;
-  }
-
+}
 
 .chapter_div {
-    margin: 25px 0;
+    margin-bottom: 25px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -25,26 +31,50 @@
     color: #666;
     font-weight: 600;
     border-bottom: 1px solid #eee;
-    background: rgb(233,233,233);
-    background: -moz-linear-gradient(90deg, rgba(233,233,233,1) 0%, rgba(107,110,255,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(233,233,233,1) 0%, rgba(107,110,255,1) 100%);
-    background: linear-gradient(90deg, rgba(233,233,233,1) 0%, rgba(107,110,255,1) 100%);
+    background: rgb(233, 233, 233);
+    background: -moz-linear-gradient(
+        90deg,
+        rgba(233, 233, 233, 1) 0%,
+        rgba(107, 110, 255, 1) 100%
+    );
+    background: -webkit-linear-gradient(
+        90deg,
+        rgba(233, 233, 233, 1) 0%,
+        rgba(107, 110, 255, 1) 100%
+    );
+    background: linear-gradient(
+        90deg,
+        rgba(233, 233, 233, 1) 0%,
+        rgba(107, 110, 255, 1) 100%
+    );
 }
 
 .lecture {
     padding: 8px 4px;
     border-bottom: 1px solid rgb(194, 193, 193);
-    transition: .5s;
+    transition: 0.5s;
 }
-.lecture:hover{
+.lecture:hover {
     background: rgb(236, 236, 236);
 }
 
 .lecture_active {
-    background: rgb(255,169,169);
-    background: -moz-linear-gradient(90deg, rgba(255,169,169,1) 0%, rgba(173,173,173,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(255,169,169,1) 0%, rgba(173,173,173,1) 100%);
-    background: linear-gradient(90deg, rgba(255,169,169,1) 0%, rgba(173,173,173,1) 100%);
+    background: rgb(255, 169, 169);
+    background: -moz-linear-gradient(
+        90deg,
+        rgba(255, 169, 169, 1) 0%,
+        rgba(173, 173, 173, 1) 100%
+    );
+    background: -webkit-linear-gradient(
+        90deg,
+        rgba(255, 169, 169, 1) 0%,
+        rgba(173, 173, 173, 1) 100%
+    );
+    background: linear-gradient(
+        90deg,
+        rgba(255, 169, 169, 1) 0%,
+        rgba(173, 173, 173, 1) 100%
+    );
 }
 .icon {
     display: inline-block;
@@ -61,9 +91,8 @@
     color: black;
     vertical-align: middle;
     margin: 0;
-
 }
-.timeIcon{
+.timeIcon {
     /* width: 57px; */
     /* display: inline-block; */
     font-weight: 400;
@@ -71,14 +100,14 @@
     margin: 0;
     float: right;
 }
-.tIcon{
+.tIcon {
     font-size: 15px;
     padding: 2px;
     border: 1px solid green;
-    border-radius:50%;
+    border-radius: 50%;
 }
-.tIconD{
-    color:green;
+.tIconD {
+    color: green;
 }
 
 .title p {
@@ -86,10 +115,12 @@
     margin: 0 !important;
 }
 
-.title i, .title span {
+.title i,
+.title span {
     text-align: right;
 }
-.time, .icon {
+.time,
+.icon {
     text-align: right !important;
     margin-right: 5px;
     margin-top: 6px;
@@ -97,23 +128,36 @@
 
 .course_about {
     font-size: 25px;
-    padding:10px 0 15px 0;
+    padding: 10px 0 15px 0;
     border-top: 1px solid rgb(218, 218, 218);
 }
 .lec_active {
     background-color: rgb(214, 214, 214);
-/* color: #fff; */
-/* background: linear-gradient(90deg, rgba(107,110,255,1) 0%, rgba(233,233,233,1) 100%);
+    /* color: #fff; */
+    /* background: linear-gradient(90deg, rgba(107,110,255,1) 0%, rgba(233,233,233,1) 100%);
 background: linear-gradient(90deg, rgba(107,110,255,1) 0%, rgba(233,233,233,1) 100%); */
 }
 
 .sidebar {
     width: 348px !important;
 }
-@media screen and (max-width: 991px){
-.sidebar {
-    transform: translate3d(-369px,0,0)!important;
-}}
-.logo-header{
+
+.logo-header {
     width: 348px;
+}
+
+.footer {
+    display: none !important;
+}
+
+@media screen and (max-width: 991px) {
+    .sidebar {
+        transform: translate3d(-369px, 0, 0) !important;
+    }
+}
+@media screen and (max-width: 991px) {
+    .nav_open .main-header,
+    .nav_open .main-panel {
+        transform: translate3d(0px, 0, 0) !important;
+    }
 }
