Update CSS and composer.json, and fix form labels and buttons in course edit view and controller

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -105,7 +105,7 @@
 
 .course .course-img img {
     /* width: 575px !important; */
-    height: 150px !important;
+    /* height: 222px !important; */
     margin: 0 auto !important;
 }
 
